--- a/project-01-frontend/src/components/Navbar.module.css
+++ b/project-01-frontend/src/components/Navbar.module.css
@@ -20,6 +20,20 @@
   font-size: 16px;
   cursor: pointer;
 
+}
+
+.navRed {
+  margin-right: 40px;
+  text-decoration: none;
+  color: red;
+  border: solid;
+  padding: 5px;
+  border-radius: 5px;
+  border-width: 1px;
+  border-width: 1px;
+  background: white;
+  font-size: 16px;
+  cursor: pointer;
 
 }
 
